updating our details

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
         <h1 class='masthead-heading'>Nicholas Jones
-          
+
         </h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I recently got a bachelor's degree from the University of Washington.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Vashon Island, Washington.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I usually end up either playing games or reading, when I have the spare time.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'm still not sure about what my dream job would be.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>For now, I still live in Washington State.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I'm mostly interested in web development skills to become more familiar with coding in general.</p>
     </section>
 
     <footer id="footer">
